self-closed clock element

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
 
   <body>
-    <clock-element></clock-element>
+    <clock-element/>
   </body>
 
   <script src="./js/main.mjs" type="module" charset="utf-8"></script>
